# nika-tui

./: Cargo.toml  rustfmt.toml
src/: app.rs  config.rs  constants.rs  event_handler.rs  helpers.rs  main.rs  tests.rs  tui.rs
src/components/: comic_page.rs  loading_screen.rs  main_page.rs  mod.rs  options_page.rs  search_page.rs
src/models/: comic.rs  mod.rs
src/models/sources/: mangapill.rs  mangareader.rs  mangasee.rs  mod.rs
src/traits/: mod.rs
src/ui/: comic_page.rs  main_page.rs  mod.rs  options_page.rs  search_page.rs  settings_page.rs
