[package]
name = "nika-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0" }
ratatui = { version = "0.26.1", features = ["all-widgets", "serde"] }
reqwest = "0.12.3"
soup = "0.5.1"
tokio = { version = "1.37.0", features = ["full"] }
