[package]
name = "nika-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-trait = "0.1.80"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
rand = "0.8.5"

ratatui = { version = "0.26.1", features = ["all-widgets", "serde"] }
reqwest = "0.12.3"
serde = "1.0.198"
soup = "0.5.1"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
tui-textarea = "0.4.0"
